--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,9 @@ Standards-Version: 3.7.2
 
 Package: vyatta-cfg-vpn
 Architecture: all
-Depends: perl, vyatta-cfg, openswan
+Depends: perl,
+ vyatta-cfg,
+ vyatta-bash,
+ openswan
 Description: Vyatta VPN configuration templates/scripts
  Vyatta VPN configuration templates and scripts.
