--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Package: vyatta-cfg-vpn
 Architecture: all
 Depends: perl,
  vyatta-cfg,
- vyatta-bash,
+ vyatta-bash | bash (>= 3.1),
  openswan
 Description: Vyatta VPN configuration templates/scripts
  Vyatta VPN configuration templates and scripts.
