--- a/debian/vyatta-cfg-vpn.postinst.in
+++ b/debian/vyatta-cfg-vpn.postinst.in
@@ -7,7 +7,7 @@ bindir=@bindir@
 sbindir=@sbindir@
 
 # remove init of daemons that we start/stop
-for init in openswan; do
+for init in openswan ipsec setkey; do
   update-rc.d -f ${init} remove >/dev/null
 done
 
