Fix 3300: VPN over PPPOE completely fails on reboot

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,7 @@ curverdir = $(sysconfdir)/config-migrate/current
 sbin_SCRIPTS =
 
 sbin_SCRIPTS += scripts/vpn-config.pl
+sbin_SCRIPTS += scripts/vyatta-vpn-ppp-updown.pl
 
 share_perl5_DATA = scripts/VyattaVPNUtil.pm
 
@@ -19,4 +20,7 @@ cpiop = find  . ! -regex '\(.*~\|.*\.bak\|.*\.swp\|.*\#.*\#\)' -print0 | \
 install-exec-hook:
 	mkdir -p $(DESTDIR)$(cfgdir)
 	cd templates; $(cpiop) $(DESTDIR)$(cfgdir)
-
+	mkdir -p $(DESTDIR)/etc/ppp/ip-up.d
+	mkdir -p $(DESTDIR)/etc/ppp/ip-down.d
+	cp scripts/vpn-ppp-up $(DESTDIR)/etc/ppp/ip-up.d/
+	cp scripts/vpn-ppp-down $(DESTDIR)/etc/ppp/ip-down.d/
