vyatta-cfg-vpn depends on vyatta-ipsec provided by vyatta-strongswan (cherry picked from commit f830e7cfd66d7cf368d47cd5dea47dd26711875a)

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,6 @@ Architecture: all
 Depends: perl,
  vyatta-cfg (>= 0.15.33),
  vyatta-bash | bash (>= 3.1),
- vyatta-openswan
+ vyatta-ipsec
 Description: Vyatta VPN configuration templates/scripts
  Vyatta VPN configuration templates and scripts.
