Update list of created files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,20 +7,21 @@
 *.deps
 .dirstamp
 libtool
-/aclocal.m4
-/autom4te.cache
-/build-stamp
-/config
-/config.log
-/config.guess
-/config.status
-/config.sub
-/configure
-/debian/files
-/debian/vyatta-cfg-vpn
-/debian/vyatta-cfg-vpn.postinst
-/debian/vyatta-cfg-vpn.debhelper.log
-/INSTALL
-/Makefile.in
-/Makefile
+aclocal.m4
+autom4te.cache
+build-stamp
+config
+config.log
+config.guess
+config.status
+config.sub
+configure
+debian/files
+debian/vyatta-cfg-vpn
+debian/vyatta-cfg-vpn.postinst
+debian/*.debhelper.log
+debian/*.substvars
+INSTALL
+Makefile.in
+Makefile
 
