VTI bring tunnel based on ipsec-sa state.

--- a/Makefile.am
+++ b/Makefile.am
@@ -29,6 +29,8 @@ install-exec-hook:
 	mkdir -p $(DESTDIR)/etc/ppp/ip-up.d
 	mkdir -p $(DESTDIR)/etc/ppp/ip-down.d
 	mkdir -p $(DESTDIR)/etc/dhcp3/dhclient-exit-hooks.d/
+	mkdir -p $(DESTDIR)/usr/lib/ipsec/
 	cp scripts/vpn-ppp-up $(DESTDIR)/etc/ppp/ip-up.d/
 	cp scripts/vpn-ppp-down $(DESTDIR)/etc/ppp/ip-down.d/
 	cp scripts/ipsecd-dhclient-hook $(DESTDIR)/etc/dhcp3/dhclient-exit-hooks.d/ipsecd
+	cp scripts/vti-up-down.sh $(DESTDIR)/usr/lib/ipsec/
