Workaround to setup vti ko and cleaner error message.

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,11 +8,17 @@ curverdir = $(sysconfdir)/config-migrate/current
 bin_sudo_usersdir = $(bindir)/sudo-users
 
 sbin_SCRIPTS =
+sbin_PROGRAMS =
 
 sbin_SCRIPTS += scripts/vpn-config.pl
 sbin_SCRIPTS += scripts/vyatta-vpn-ppp-updown.pl
 sbin_SCRIPTS += scripts/is_valid_address.pl
 sbin_SCRIPTS += scripts/vyatta-vti-config.pl
+
+sbin_PROGRAMS += src/cfgvti
+
+sbin_cfgvti = src/cfgvti.c
+
 bin_sudo_users_SCRIPTS = scripts/vyatta-ipsec-dhcp.pl
 share_perl5_DATA = lib/Vyatta/VPN/Util.pm
 
