Bugfix 8276: Vti not working on a 32-bit machine due to sign bit overload.
In a 32-bit machine the signed bit is at the 32'nd bit position.
Mark used by vti set's (0x9000-0000) that bit position.
Changed the api to use strtoul to read the data from the command line and
configure the mark.
Also, changed the vyatta-cfg-vpn package to be arch dependent since it now
has a binary that it generates.

--- a/debian/control
+++ b/debian/control
@@ -6,10 +6,11 @@ Build-Depends: debhelper (>= 5), autotools-dev
 Standards-Version: 3.7.2
 
 Package: vyatta-cfg-vpn
-Architecture: all
+Architecture: any
 Depends: perl,
  vyatta-cfg (>= 0.15.33),
  vyatta-bash | bash (>= 3.1),
- vyatta-ipsec
+ vyatta-ipsec,
+ libc6 (>= 2.7-6)
 Description: Vyatta VPN configuration templates/scripts
  Vyatta VPN configuration templates and scripts.
