Bugfix 8289: Vti mark values should be implicit
Vti tunnel uses fwmark from the kernel skbuff. This value is now internally
allocated instead of getting it from the configuration.

Also fixed 8286 where configuration was allowing both a tunnel and VTI between
the same vpn src/dst.

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,7 @@ sbin_cfgvti = src/cfgvti.c
 
 bin_sudo_users_SCRIPTS = scripts/vyatta-ipsec-dhcp.pl
 share_perl5_DATA = lib/Vyatta/VPN/Util.pm
+share_perl5_DATA += scripts/vtiIntf.pm
 
 logrotate_DATA = etc/logrotate.d/vyatta-ipsec-logs
 
