--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: vyatta-cfg-vpn
 Section: contrib/net
 Priority: extra
-Maintainer: Vyatta Package Maintainers <maintainers@vyatta.com>
+Maintainer: Vyatta Package Maintainers <maintainers@vyos.net>
 Build-Depends: debhelper (>= 5), autotools-dev, libnfnetlink-dev
 Standards-Version: 3.7.2
 
