--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,8 @@ Depends: perl,
  vyatta-cfg (>= 0.15.33),
  vyatta-bash | bash (>= 3.1),
  strongswan (>= 5.2),
+ strongswan-libvici (>= 5.2),
+ strongswan-swanctl (>= 5.2),
  libcrypt-openssl-rsa-perl,
  libc6 (>= 2.7-6)
 Description: VyOS IPsec VPN configuration templates/scripts
