--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Depends: perl,
  vyatta-bash | bash (>= 3.1),
  strongswan (>= 5.6),
  strongswan-swanctl (>= 5.6),
+ libstrongswan-standard-plugins (>=5.6),
  libstrongswan-extra-plugins (>=5.6),
  libcharon-extra-plugins (>=5.6),
  libcrypt-openssl-rsa-perl,
